# Calidad-de-vinos

./: README.md  pyproject.toml
Cuadernos/.ipynb_checkpoints/: Evaluación_calidad_vinos-checkpoint.ipynb
