[tool.poetry]
name = "guía 2"
version = "0.1.0"
description = "Guia 2 Modelos de Clasificacion Supervisada"
authors = ["Mara Calderon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
